kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: bc98ms.bootcamp64.tk
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: mockserver-service
           port:
             number: 3000
  - host: bc98fe.bootcamp64.tk
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: frontend-service
           port:
             number: 80
  - host: bc98be.bootcamp64.tk
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: discover-server
           port:
             number: 8761
     - path: /api/users
       pathType: Prefix
       backend:
         service:
           name: user
           port:
             number: 9007
     - path: /api/cryptos
       pathType: Prefix
       backend:
         service:
           name: crypto
           port:
             number: 9005
     - path: /api/wallets
       pathType: Prefix
       backend:
         service:
           name: wallet
           port:
             number: 9006
